added controller implementation, logger and prometheus metrics endpoint
